Refactor FeedbackResponseService: reemplazar excepciones genéricas por FeedbackResponseNotFoundException para mejorar el manejo de errores; simplificar la conversión de listas.